# Radio

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  radio.txt
boards/espressif/esp32_devkitc/: Radio.overlay
boards/xtensa/esp32_devkit/: Radio_esp32.overlay  board.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/uart/: CMakeLists.txt  Kconfig  Kconfig.uart  uart.cpp
drivers/uart/include/: uart.hpp
drivers/uart/zephyr/: module.yaml
drivers/uartone/: CMakeLists.txt  Kconfig.uartone
drivers/uartone/include/: uart.hpp
drivers/uartone/zephyr/: module.yml
interrupts/: CMakeLists.txt  Interrupt.cpp  Kconfig
interrupts/include/: Interrupt.hpp
interrupts/zephyr/: module.yaml
src/: Radio.c  Radio.cpp
threads/: CMakeLists.txt  Kconfig  ThreadOne.cpp
threads/include/: ThreadOne.hpp  thread_notes.txt  threadone_heap.hpp
threads/zephyr/: module.yaml
